# perpetual-scholar-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  docker-compose.yml  psa-agent.service  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  dashboard.py  logging_config.py  mock_mode.py  mock_pipeline.py  resilience.py
agent/config/: __init__.py  settings.py
agent/database/: __init__.py  schema.py
agent/finetune/: __init__.py  adapter_manager.py  dataset_exporter.py  ollama_reloader.py  trainer.py  trigger.py
agent/ingestion/: __init__.py  arxiv_fetcher.py  deduplicator.py  embedder.py  github_fetcher.py  rss_fetcher.py
agent/llm/: __init__.py  backend.py  claude_backend.py  ollama_backend.py  openai_backend.py
agent/monitoring/: __init__.py  metrics.py  reporter.py
agent/orchestrator/: __init__.py  pipeline.py  scheduler.py
agent/reasoning/: __init__.py  code_generator.py  lesson_retriever.py  prompts.py  summarizer.py
agent/reporting/: __init__.py  brain_updater.py
agent/reward/: __init__.py  calculator.py  lesson_writer.py  llm_judge.py
agent/rl/: __init__.py  checkpoint.py  environment.py  policy.py
agent/sandbox/: __init__.py  baseline_store.py  benchmark_harness.py  executor.py  resource_limits.py
agent/vectorstore/: __init__.py  faiss_index.py
docker/: sandbox.Dockerfile
docker/fixtures/: baselines.py
docs/: DEPLOYMENT.md  TESTING.md
docs/superpowers/plans/: 2025-01-08-production-readiness-implementation.md
docs/superpowers/specs/: 2025-01-08-production-readiness-design.md
monitoring/: prometheus.yml
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mocks.py
tests/unit/: test_calculator.py  test_deduplicator.py  test_settings.py
