[tool.poetry]
name = "perpetual-scholar-agent"
version = "0.1.0"
description = "An autonomous 24/7 self-evolving agent that masters a specialized technical domain through continuous research, sandbox experimentation, and reinforcement-learning-driven self-improvement"
authors = ["perpetual-scholar-agent"]
readme = "README.md"
packages = [{include = "agent"}]

[tool.poetry.dependencies]
python = "^3.11"
crawl4ai = "^0.4"
arxiv = "^2.1"
PyGithub = "^2.3"
docker = "^7.0"
stable-baselines3 = "^2.3"
torch = "^2.3"
transformers = "^4.42"
peft = "^0.11"
trl = "^0.9"
sentence-transformers = "^3.0"
faiss-cpu = "^1.8"
aiosqlite = "^0.20"
apscheduler = "^3.10"
fastapi = "^0.111"
uvicorn = "^0.30"
pydantic-settings = "^2.3"
python-dotenv = "^1.0"
httpx = "^0.27"
anthropic = "^0.29"
openai = "^1.35"
gymnasium = "^0.29"
structlog = "^24.1"
tenacity = "^8.3"
prometheus-client = "^0.20"
pytest-benchmark = "^4.0"
pytest = "^8.2"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]
