[tool.poetry]
name = "perpetual-scholar-agent"
version = "0.1.0"
description = "An autonomous 24/7 self-evolving agent that masters a specialized technical domain through continuous research, sandbox experimentation, and reinforcement-learning-driven self-improvement"
authors = ["perpetual-scholar-agent"]
readme = "README.md"
packages = [{include = "agent"}]

[tool.poetry.dependencies]
python = "^3.11"
crawl4ai = "^0.4"
arxiv = "^2.1"
PyGithub = "^2.3"
docker = "^7.0"
stable-baselines3 = "^2.3"
torch = "^2.3"
transformers = "^4.42"
peft = "^0.11"
trl = "^0.9"
sentence-transformers = "^3.0"
faiss-cpu = "^1.8"
aiosqlite = "^0.20"
apscheduler = "^3.10"
fastapi = "^0.111"
uvicorn = "^0.30"
pydantic-settings = "^2.3"
python-dotenv = "^1.0"
httpx = "^0.27"
anthropic = "^0.29"
openai = "^1.35"
structlog = "^24.1"
tenacity = "^8.3"
prometheus-client = "^0.20"
gymnasium = "^0.29"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-cov = "^5.0"
pytest-benchmark = "^4.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"
ruff = "^0.6.0"
pre-commit = "^3.8"
safety = "^3.2"
mypy = "^1.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=agent --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests"
]

[tool.coverage.run]
source = ["agent"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
